# CoursePaperBejewled

./: CMakeLists.txt  CONSTANTS.h  CourseWork  README.md  Structs.h  main.cpp  records.txt
BasicFunc/: BasicFunc.cpp  BasicFunc.h  basicFigures.cpp  basicFigures.h  basicFunc.cpp  basicFunc.h
Constants/: constChar.h
Figures/: Figures.cpp  Figures.h  figures.cpp  figures.h
Menu/: Menu.cpp  Menu.h  menu.cpp  menu.h
Music/: Music.cpp  Music.h
Score/: Score.cpp  Score.h  score.cpp
